--- a/css/styles.css
+++ b/css/styles.css
@@ -74,7 +74,7 @@ section {
       rgba(11, 36, 65, 0.8),
       rgba(2, 3, 46, 0.5)
     ),
-    url("img/bg-section.jpg");
+    url("/img/bg-section.jpg");
   background-size: 100% 100%;
   background-repeat: no-repeat;
   background-position: center;
