--- a/css/styles.css
+++ b/css/styles.css
@@ -72,7 +72,12 @@ section {
   background-size: 100% 100%;
   background-repeat: no-repeat;
   background-position: center;
-
+  background-image: linear-gradient(
+      to bottom,
+      rgba(11, 36, 65, 0.8),
+      rgba(2, 3, 46, 0.5)
+    ),
+    url("/img/bg-section.png");
   height: 80vh;
   align-items: center;
   padding: 10px 20px 15px;
