--- a/css/styles.css
+++ b/css/styles.css
@@ -348,7 +348,7 @@ footer a:hover {
   .field-agent-img,
   .intelligencer-img {
     width: auto;
-    height: 100px;
+    height: 140px;
   }
   .rules-spies-img {
     width: 100px;
@@ -396,7 +396,7 @@ footer a:hover {
 
   .lucas-samuel {
     font-size: 1.9em;
-    padding: 10px 25px;
+    padding: 20px;
   }
 
   footer a:hover {
@@ -469,7 +469,8 @@ footer a:hover {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 80vw;
+  width: 60vw;
+  height: 60vh;
   border-radius: 20px 120px 20px 50px;
   padding: 0 20px 0 20px;
   border: 10px solid #29abef;
