--- a/css/styles.css
+++ b/css/styles.css
@@ -372,31 +372,30 @@ footer a:hover {
 
   footer {
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
     background-color: #02032e;
     font-family: "IBM Plex Mono", monospace;
     font-size: 0.6em;
     height: 5vh;
     color: #ffc000;
-    padding: 20px 5px 20px 5px;
+    padding: 10px 5px 10px 5px;
   }
 
   footer li {
     list-style: none;
-    display: inline-block;
+    display: block;
   }
 
   footer a {
     text-decoration: none;
     color: #26a6e8;
     font-family: "Press Start 2P", cursive;
-    font-size: 0.6em;
+    font-size: 0.8em;
   }
 
   .lucas-samuel {
     font-size: 1.9em;
-    padding: 20px;
   }
 
   footer a:hover {
@@ -424,11 +423,11 @@ footer a:hover {
 .pop-up-field-agent h2 {
   font-size: 2em;
   color: #28ee3d;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
 }
 .pop-up-intelligencer p,
 .pop-up-field-agent p {
-  font-size: 1.6em;
+  font-size: 1.1em;
   font-weight: bold;
   color: #29abef;
 }
@@ -451,8 +450,8 @@ footer a:hover {
 }
 
 .rules-spies-img {
-  width: 200px;
-  height: 200px;
+  width: 150px;
+  height: 150px;
   transition: 0.5s;
   margin: 20px;
 }
