--- a/css/styles.css
+++ b/css/styles.css
@@ -1,56 +1,42 @@
 * {
   padding: 0;
   margin: 0;
+  border-box: box-sizing;
+  font-family: "Fira Code", monospace;
 }
 
-html,
-body {
-  weight: 100%;
-  height: 100%;
+main {
+  background-color: blue;
+  width: 100vw;
+  height: 100vh;
 }
+/* header */
 
-header,
-section,
-footer {
-  min-widght: 320px;
-  max-widght: 700px;
-}
-
-.container {
-  display: flex;
-  flex-direction: column;
-  justify-content: auto;
-  height: 100%;
-  width: 100%;
-}
 header {
-  display: flex;
-  height: 10vh;
-  padding: 10px 20px 15px;
   background-color: #02032e;
+  height: 15vh;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 2vw;
 }
 
-.logo {
+header .logo {
   display: flex;
-  font-family: "IBM Plex Mono", monospace;
-  font-size: 1.5em;
-  justify-content: left;
+  justify-content: center;
   align-items: center;
   color: #ffc000;
 }
 
-.img-logo {
-  padding-left: 20px;
-  width: 80px;
-  height: 80px;
+header img {
+  width: 70px;
+  height: 70px;
 }
 
 .navbar {
   display: flex;
   justify-content: right;
   align-items: center;
-  height: 100%;
-  width: 100%;
 }
 
 .navbar li {
@@ -63,7 +49,7 @@ header {
   text-decoration: none;
   color: #26a6e8;
   font-family: "Press Start 2P", cursive;
-  font-size: 0.9em;
+  font-size: 0.9rem;
   transition: all 0.3s ease-in-out;
 }
 .navbar a:hover {
@@ -71,94 +57,97 @@ header {
   text-shadow: 5px 5px 10px #ffc000;
   transform: scale(1.3);
 }
+/* section start */
 
 section {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  background-size: 100% 100%;
-  background-repeat: no-repeat;
-  background-position: center;
   background-image: linear-gradient(
       to bottom,
       rgba(11, 36, 65, 0.8),
-      rgba(2, 3, 46, 0.5)
+      rgba(2, 3, 46, 0.8)
     ),
-    url("../img/bg-section.png");
-  height: 80vh;
+    url("/img/bg-section.png");
+  width: 100vw;
+  height: 75vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   align-items: center;
-  padding: 10px 20px 15px;
-  background-color: #0b2441;
+}
+
+section .start-content {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
 }
 
 section h2 {
-  color: #ffc000;
+  font-size: 4rem;
   background-color: #02032e;
-  font-size: 7em;
-  margin-bottom: 50px;
-  font-family: "IBM Plex Mono", monospace;
-  padding: 10px 40px 10px 40px;
+  color: #ffc000;
+  padding: 1rem 2rem;
+  margin: 2.4rem;
   border-radius: 10px 70px 10px 70px;
   box-shadow: -5px -5px 10px #d9ff0b;
 }
 
-.field-agent-img,
-.intelligencer-img {
-  width: 350px;
-  height: 350px;
-  transition: 0.5s;
+.spies-img {
+  transition: 0.5s ease-in-out;
 }
 
-.field-agent-img:hover,
-.intelligencer-img:hover {
-  transform: scale(1.1);
+.spies-img:hover {
+  transform: scale(1.2);
   cursor: pointer;
 }
 
-.start-container {
-  display: flex;
-  align-items: center;
+section img {
+  width: 200px;
+  height: 200px;
 }
 
-.button {
+section button {
   background-color: #02032e;
   color: #1e80b7;
-  padding: 15px 28px;
+  padding: 10px 25px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
-  font-size: 20px;
+  font-size: 1.2em;
   font-weight: 900;
-  margin: 0 50px;
+  margin: 0 100px;
   cursor: pointer;
   border-radius: 10px;
   box-shadow: 1px 1px 5px #259ddd;
   transition: 0.3s ease-in-out;
 }
 
-.button:hover {
-  box-shadow: 5px 8px 10px #259ddd;
-  transform: translateY(-3px);
-  color: #259ddd;
+section button:hover {
+  transform: scale(1.1);
+  color: #ffc000;
+  box-shadow: 7px 7px 5px #259ddd;
 }
+
+/* footer */
 
 footer {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
   background-color: #02032e;
   font-family: "IBM Plex Mono", monospace;
   font-size: 1em;
-  height: 5vh;
+  height: 10vh;
   color: #ffc000;
-  padding: 20px 30px 20px 30px;
 }
 
-footer li {
-  list-style: none;
-  display: inline-block;
+footer p {
+  color: #ffc000;
+  font-size: 0.6rem;
 }
 
+.prof-lucas {
+  font-size: 2em;
+  padding: 10px;
+}
 footer a {
   text-decoration: none;
   color: #26a6e8;
@@ -166,18 +155,16 @@ footer a {
   font-size: 0.5em;
 }
 
-footer p {
-  font-size: 0.9em;
+footer ul {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
-.lucas-samuel {
-  font-size: 1em;
-  padding: 10px;
-}
-
-footer a:hover {
-  color: #ffc000;
-  text-shadow: 5px 5px 10px #ffc000;
+footer li {
+  list-style: none;
+  display: inline-grid;
+  padding: 1vw;
 }
 
 .pop-up-intelligencer,
@@ -189,29 +176,34 @@ footer a:hover {
   justify-content: center;
   align-items: center;
   position: fixed;
+  top: 0;
+  left: 0;
   background-color: rgba(0, 0, 0, 0.4);
   color: #fff;
   font-family: "IBM Plex Mono", monospace;
   font-size: 1.5em;
   text-align: center;
 }
-.pop-up-intelligencer h2,
-.pop-up-field-agent h2 {
-  font-size: 2em;
-  color: #28ee3d;
-  margin-bottom: 20px;
-}
-.pop-up-intelligencer p,
-.pop-up-field-agent p {
-  font-size: 1.6em;
-  font-weight: bold;
-  color: #29abef;
-}
+
+.show.pop-up-intelligencer,
 .show.pop-up-intelligencer {
   display: flex;
 }
 .show.pop-up-field-agent {
   display: flex;
+}
+
+.pop-up-intelligencer h2,
+.pop-up-field-agent h2 {
+  font-size: 1.5rem;
+  color: #28ee3d;
+  margin-bottom: 20px;
+}
+.pop-up-intelligencer p,
+.pop-up-field-agent p {
+  font-size: 1.3rem;
+  font-weight: bold;
+  color: #29abef;
 }
 
 @keyframe pop-up-intelligencer-content, pop-up-field-agent-content {
@@ -226,14 +218,14 @@ footer a:hover {
 }
 
 .rules-spies-img {
-  width: 300px;
-  height: 100%;
-  transition: 0.5s;
+  width: 12rem;
+  height: auto;
+  transition: 0.5s ease-in-out;
 }
 
 .rules-spies-img:hover {
   transform: scale(1.1);
-  cursor: none;
+  cursor: pointer;
 }
 
 .pop-up-intelligencer-content,
@@ -246,11 +238,12 @@ footer a:hover {
     url("../img/bg-section.png");
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
-  width: 50vw;
+  width: 60vw;
+  height: 70vh;
   border-radius: 20px 120px 20px 50px;
-  padding: 40px;
+  padding: 10px;
   border: 10px solid #29abef;
   animation: pop-up-intelligencer-content 0.5s ease-in-out;
 }
@@ -276,226 +269,25 @@ footer a:hover {
 .close-button-field-agent:hover {
   box-shadow: 5px 8px 10px #259ddd;
   transform: translateY(-3px);
-  color: #259ddd;
+  color: #ffc000;
 }
 
-@media screen and (max-width: 900px) {
-  .logo {
-    display: flex;
-    font-family: "IBM Plex Mono", monospace;
-    font-size: 1.2em;
-    justify-content: left;
-    align-items: center;
-    color: #ffc000;
+@media screen and (max-width: 800px) {
+  .pop-up-intelligencer,
+  .pop-up-field-agent {
+    width: 100vw;
+    height: 100vh;
+  }
+  .pop-up-intelligencer-content,
+  .pop-up-field-agent-content {
+    width: 50;
+    height: 80vh;
   }
 
-  .img-logo {
-    padding-left: 0px;
-    width: 60px;
-    height: 60px;
+  .pop-up-intelligencer p,
+  .pop-up-field-agent p {
+    font-size: 1rem;
+    font-weight: bold;
+    color: #29abef;
   }
-
-  .navbar {
-    display: flex;
-    justify-content: right;
-    align-items: center;
-    height: 100%;
-    width: 100%;
-  }
-
-  .navbar li {
-    list-style: none;
-    display: inline-grid;
-    padding: 5px;
-    margin-left: 5px;
-  }
-
-  .navbar a {
-    text-decoration: none;
-    color: #26a6e8;
-    font-family: "Press Start 2P", cursive;
-    font-size: 0.65em;
-    transition: all 0.3s ease-in-out;
-  }
-  .navbar a:hover {
-    color: #ffc000;
-    text-shadow: 5px 5px 10px #ffc000;
-    transform: scale(1.3);
-  }
-
-  .button {
-    background-color: #02032e;
-    color: #1e80b7;
-    padding: 10px 15px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 15px;
-    font-weight: 900;
-    margin: 0 15px;
-    cursor: pointer;
-    border-radius: 10px;
-    box-shadow: 1px 1px 5px #259ddd;
-    transition: 0.3s ease-in-out;
-  }
-
-  .button:hover {
-    box-shadow: 5px 8px 10px #259ddd;
-    transform: translateY(-3px);
-    color: #259ddd;
-  }
-
-  .field-agent-img,
-  .intelligencer-img {
-    width: auto;
-    height: 140px;
-  }
-  .rules-spies-img {
-    width: 100px;
-    height: 100px;
-    transition: 0.5s;
-  }
-
-  .rules-spies-img:hover {
-    transform: scale(1.3);
-    cursor: none;
-  }
-  section h2 {
-    color: #ffc000;
-    background-color: #02032e;
-    font-size: 3.5em;
-    font-family: "IBM Plex Mono", monospace;
-    padding: 10px 20px 10px 20px;
-    border-radius: 5px 35px 5px 35px;
-    box-shadow: -5px -5px 10px #d9ff0b;
-  }
-
-  footer {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    background-color: #02032e;
-    font-family: "IBM Plex Mono", monospace;
-    font-size: 0.6em;
-    height: 5vh;
-    color: #ffc000;
-    padding: 10px 5px 10px 5px;
-  }
-
-  footer li {
-    list-style: none;
-    display: block;
-  }
-
-  footer a {
-    text-decoration: none;
-    color: #26a6e8;
-    font-family: "Press Start 2P", cursive;
-    font-size: 0.8em;
-  }
-
-  .lucas-samuel {
-    font-size: 1.9em;
-  }
-
-  footer a:hover {
-    color: #ffc000;
-    text-shadow: 5px 5px 10px #ffc000;
-  }
-}
-
-.pop-up-intelligencer,
-.pop-up-field-agent {
-  z-index: 2000;
-  display: none;
-  width: 100vw;
-  height: 100vh;
-  justify-content: center;
-  align-items: center;
-  position: fixed;
-  background-color: rgba(0, 0, 0, 0.4);
-  color: #fff;
-  font-family: "IBM Plex Mono", monospace;
-  font-size: 1em;
-  text-align: center;
-}
-.pop-up-intelligencer h2,
-.pop-up-field-agent h2 {
-  font-size: 2em;
-  color: #28ee3d;
-  margin-bottom: 10px;
-}
-.pop-up-intelligencer p,
-.pop-up-field-agent p {
-  font-size: 1.1em;
-  font-weight: bold;
-  color: #29abef;
-}
-.show.pop-up-intelligencer {
-  display: flex;
-}
-.show.pop-up-field-agent {
-  display: flex;
-}
-
-@keyframe pop-up-intelligencer-content, pop-up-field-agent-content {
-  from {
-    opacity: 0;
-    transform: translate3d(0, -60px, 0);
-  }
-  to {
-    opacity: 1;
-    transform: translate3d(0, 0, 0);
-  }
-}
-
-.rules-spies-img {
-  width: 150px;
-  height: 150px;
-  transition: 0.5s;
-  margin: 20px;
-}
-
-.pop-up-intelligencer-content,
-.pop-up-field-agent-content {
-  background-image: linear-gradient(
-      to bottom,
-      rgba(11, 36, 65, 0.8),
-      rgba(2, 3, 46, 0.9)
-    ),
-    url("../img/bg-section.png");
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  width: 60vw;
-  height: 60vh;
-  border-radius: 20px 120px 20px 50px;
-  padding: 0 20px 0 20px;
-  border: 10px solid #29abef;
-  animation: pop-up-intelligencer-content 0.5s ease-in-out;
-}
-
-.close-button-intelligencer,
-.close-button-field-agent {
-  background-color: #02032e;
-  color: #1e80b7;
-  padding: 15px 28px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 20px;
-  font-weight: 900;
-  margin: 30px 20px 30px;
-  cursor: pointer;
-  border-radius: 10px;
-  box-shadow: 1px 1px 5px #259ddd;
-  transition: 0.3s ease-in-out;
-}
-
-.close-button-intelligencer:hover,
-.close-button-field-agent:hover {
-  box-shadow: 5px 8px 10px #259ddd;
-  transform: translateY(-3px);
-  color: #259ddd;
 }
