--- a/css/styles.css
+++ b/css/styles.css
@@ -17,7 +17,7 @@ main {
 }
 /* header */
 .logo {
-  font-size: 1.6rem;
+  font-size: 1.9rem;
   color: #ffc000;
   display: flex;
   justify-content: center;
@@ -32,7 +32,7 @@ main {
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: space-between;
+  justify-content: space-around;
   background-color: #00baf0;
   background: linear-gradient(to left, #02032e, #030554);
   color: #fff;
@@ -48,17 +48,23 @@ main {
   padding: 0;
 }
 
-.menu > li {
-  margin: 0 1rem;
+.menu li {
+  margin: 0 2rem;
   overflow: hidden;
 }
 
+.menu li:hover {
+  transform: scale(1.1);
+}
 .menu a {
-  display: none;
   text-decoration: none;
   font-family: "Press Start 2P", cursive;
-  font-size: 1rem;
+  font-size: 1.4rem;
+  color: #00baf0;
+}
+.menu a:hover {
   color: #ffc000;
+  text-shadow: 2px 2px 7px #ffc000;
 }
 
 .menu-button-container {
@@ -333,6 +339,19 @@ footer li {
     height: 100vh;
   }
   /* header responsive */
+
+  .top-nav {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    background-color: #00baf0;
+    background: linear-gradient(to left, #02032e, #030554);
+    color: #fff;
+    height: 10vh;
+    padding: 2em 2em 2em 1em;
+  }
+
   .menu-button-container {
     display: flex;
   }
@@ -352,14 +371,16 @@ footer li {
   .menu > li {
     display: flex;
     justify-content: center;
-    font-size: 1.8rem;
+    font-size: 1.6rem;
     text-decoration: none;
     color: #ffc000;
     margin: 0;
     padding: 0.5em 0;
     width: 100%;
   }
-
+  .menu > li:hover {
+    transform: scale(1);
+  }
   #menu-toggle:checked ~ .menu li {
     align-items: center;
     font-family: "Press Start 2P", cursive;
