--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,7 @@ html,
 body {
   margin: 0;
   height: 100%;
+  background-color: #02032e;
 }
 
 main {
@@ -119,20 +120,22 @@ main {
 
 /* section start */
 
+#canvas {
+  width: 100vw;
+  height: 78vh;
+}
+
 .start-container {
-  background-image: linear-gradient(
-      to bottom,
-      rgba(11, 36, 65, 0.8),
-      rgba(2, 3, 46, 0.8)
-    ),
-    url("../img/bg-section.png");
+  display: flex;
   background-size: cover;
   width: 100vw;
-  height: 80vh;
-  display: flex;
+  height: 78vh;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  position: absolute;
+  top: 10vh;
+  left: 0;
 }
 
 section .start-content {
@@ -208,6 +211,7 @@ footer a {
   color: #26a6e8;
   font-family: "Press Start 2P", cursive;
   font-size: 0.7em;
+  padding: 0.5em;
 }
 
 footer ul {
@@ -219,7 +223,6 @@ footer ul {
 footer li {
   list-style: none;
   display: inline-grid;
-  padding: 0.5rem;
 }
 
 .prof-lucas {
@@ -407,13 +410,12 @@ footer li {
 
   /* section start */
 
+  #canvas {
+    width: 100vw;
+    height: 80vh;
+  }
+
   .start-container {
-    background-image: linear-gradient(
-        to bottom,
-        rgba(11, 36, 65, 0.8),
-        rgba(2, 3, 46, 0.8)
-      ),
-      url("../img/bg-section.png");
     background-size: cover;
     width: 100vw;
     height: 80vh;
@@ -421,6 +423,8 @@ footer li {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    top: 10vh;
+    left: 0;
   }
 
   section .start-content {
