--- a/css/styles.css
+++ b/css/styles.css
@@ -390,6 +390,7 @@ footer li {
     height: 3.5em;
     padding: 0.5em;
     transition: height 1000ms cubic-bezier(0.23, 1, 0.32, 1);
+    z-index: 10;
   }
 
   #menu-toggle ~ .menu li {
