--- a/css/table.css
+++ b/css/table.css
@@ -4,12 +4,7 @@
   box-sizing: border-box;
 }
 
-body {
-  width: 100%;
-  height: 100%;
-}
-
 #canvas {
-  width: 100vw;
-  height: 100vh;
+  height: 100%;
+  background-color: #02032e;
 }
