--- a/css/components/header.css
+++ b/css/components/header.css
@@ -2,12 +2,13 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-between;
     background-color: #00baf0;
     background: linear-gradient(to left, #02032e, #030554);
     color: #fff;
+    width: 100vw;
     height: 10vh;
-    padding: 1em;
+    padding: 15px;
   }
 
   @media screen and (max-width: 740px) {
@@ -21,6 +22,5 @@
       background: linear-gradient(to left, #02032e, #030554);
       color: #fff;
       height: 10vh;
-      padding: 2em 2em 2em 1em;
     }
   }
